--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
         canvas {
             width: 100%;
         }
+        @font-face {
+            font-family: 'Linearo';
+            src: url ('assets/fonts/Linearo.ttf');
+        }
+        .fontPreload {
+            font-family: 'Linearo';
+            position: absolute;
+            left: -100px;
+        }
     </style>
 </head>
 <body>
+    <div class="fontPreload">.</div>
     <script src="assets/scripts/phaser.js"></script>
     <script src="assets/scripts/Card.js"></script>
     <script src="assets/scripts/GameScene.js"></script>
